# skysh_kulab

./: .env.example  .gitignore  README.md  check_status.cmd  data_recorder.py  design.md  docker-compose.yml  examples.py  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  readmd.md  requirements.txt  run_all.cmd  run_backend.cmd  run_frontend.cmd  run_ingestion.cmd  run_redis.cmd  run_snapshot_worker.cmd  stop_all.cmd  upbit_websocket_client.py
app/: constants.py  db.py  demo_data.py  main.py  market_data.py  models.py  pipeline.py  schemas.py  snapshot_worker.py  storage.py
docs/: backend-role-split.md  indicator-calculation-and-persona-rules.md  phase0-contract.md
indicator_persona/: __init__.py  indicators.py  models.py  persona.py  thresholds.py
skysh_kulab/: __init__.py
src/: main.tsx  styles.css
src/skysh_kulab/ingestion/: config.py  domain.py  main.py  minute_bucket.py  redis_resp.py  upbit.py
tests/: conftest.py  test_indicator_persona.py  test_ingestion_contract.py  test_pipeline_integration.py  test_storage_api.py
