[project]
name = "skysh-kulab"
version = "0.1.0"
description = "Upbit trade ingestion and Redis minute bucket writer"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=12.0"
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
